# gsdesign-python

./: CHANGELOG.md  README.md  main.py  pyproject.toml
.github/workflows/: ci-tests.yml
src/gsdesign/: integration.py
tests/: test_integration.py
