[project]
name = "gsdesign"
version = "0.0.1"
description = "Add your description here"
authors = [
    { name = "Nan Xiao", email = "me@nanx.me" }
]
dependencies = [
    "numpy>=2.0.0",
]
readme = "README.md"

requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "isort>=6.1.0",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.3",
]
